# dist/openapi.yaml
@@ -70,6 +70,26 @@ paths:
       responses:
         "200":
           description: "the user has ben successfully logged out"
+
+  /home:
+    get:
+      tags:
+      - Auth
+      summary: The home page of Busa's Recipes
+      description: shows the home page with 3 random recipes on the left and 3 last seen recipes of the logged in on the right.
+      operationId: homeBusaPage
+      responses:
+        "200":
+          description: data about the user's favorites recipes returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RecipePreview'
+      security:
+      - cookieAuth: []
+
   /users/favorites:
     get:
       tags:
@@ -100,7 +120,7 @@ paths:
             schema:
               type: object
               properties:
-                reciepeId:
+                recipeId:
                   type: string
                   description: reciepe's id which the user saved
                   example: 716429
@@ -118,15 +138,6 @@ paths:
       - Users
       description: Get the user recipes that created by him  
       operationId: myRecipes
-      # parameters:
-      # - name: userId
-      #   in: path
-      #   description: Get the user recepies by passing the user's id
-      #   required: true
-      #   style: simple
-      #   explode: false
-      #   schema:
-      #     type: string
       responses:
         "200":
           description: data about the user's recipes returned
@@ -135,7 +146,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/RecipePreview'
+                  $ref: '#/components/schemas/RecipePreviewForMyRecipe'
         "401":
           description: user is not authorized
       security:
@@ -151,20 +162,49 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/FullRecipe'
+              $ref: '#/components/schemas/MyRecipe'
         required: true
       responses:
         "201":
-          description: A new recipe has been added
+          description: A new recipe has been added successfully 
         "400":
           description: wrong input parameters
 
-  /recipes/{recipeId}:
+  /users/{userId}/familyRecipes:
+    get:
+      tags:
+      - Users
+      summary: Return Full details on recipe by his ID
+      description: Return Full details on recipe by his ID
+      parameters:
+      - name: userId
+        in: path
+        description: users's id
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+      responses:
+        "200":
+          description: List of user's Family's Recipes details
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FamilyRecipe'
+        "401":
+          description: user is not authorized
+      security:
+      - cookieAuth: []
+  
+  /recipes/show_details/{recipeId}:
     get:
       tags:
       - Recipes
-      summary: Return preview details on recipe by his ID
-      description: Return preview details on recipe by his ID
+      summary: Return Full details on recipe by his ID
+      description: Return Full details on recipe by his ID
       parameters:
       - name: recipeId
         in: path
@@ -180,9 +220,76 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RecipePreview'
+                $ref: '#/components/schemas/FullRecipe'
         "404":
           description: recipeId is not exists
+  
+  /recipes/search:
+    get:
+      tags:
+      - Recipes
+      summary: search page for recipes
+      description: "given a recipe name and an option to add cuisines, diets and intolerances show the recipes"
+      operationId: recipeSearch
+      parameters:
+      - name: recipeName
+        in: query
+        description: name of the Recipe
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+      - name: cuisine
+        in: query
+        description: cuisine of the Recipe
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: diet
+        in: query
+        description: diet of the Recipe
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: intolerance
+        in: query
+        description: intolerance of the Recipe
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: amount
+        in: query
+        description: the amount of results for the search to return
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Recipe's details
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RecipePreview'
+        "400":
+          description: bad request
+
 components:
   schemas:
     User:
@@ -241,6 +348,45 @@ components:
       example:
         username: my_name
         password: my_name@12
+    RecipePreviewForMyRecipe:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: recipe identifier
+          example: 102
+        title:
+          type: string
+          description: recipe name
+          example: Simple Macaroni and Cheese
+        image:
+          type: string
+          description: recipe image
+          format: URL
+          example: https://spoonacular.com/recipeimages/655455-566x370.jpg
+        readyInMinutes:
+          type: integer
+          description: the time takes to make this recipe
+          example: 45
+        vegetarian:
+          type: boolean
+          description: indication if the recipe is vegetarian
+          example: false
+        vegan:
+          type: boolean
+          description: indication if the recipe is vegan
+          example: false
+        glutenFree:
+          type: boolean
+          description: indication if the recipe is gluten free
+          example: false
+        # wasWatched:
+        #   type: boolean
+        #   description: indication if the recipe was watched by logged in user
+        # savedToFavourites:
+        #   type: boolean
+        #   description: indication if the recipe was saved to user's favourites
+
     RecipePreview:
       type: object
       properties:
@@ -276,17 +422,45 @@ components:
         glutenFree:
           type: boolean
           description: indication if the recipe is gluten free
-          example: false 
+          example: false
+        wasWatched:
+          type: boolean
+          description: indication if the recipe was watched by logged in user
+        savedToFavourites:
+          type: boolean
+          description: indication if the recipe was saved to user's favourites
+    
     FullRecipe:
-      type: object
       required:
       - recipePreview
       - ingredients
       - instructions
       - servings
+      type: object
       properties:
         recipePreview:
           $ref: '#/components/schemas/RecipePreview'
+        ingredients:
+          type: array
+          items:
+            $ref: '#/components/schemas/Ingredient'
+        instructions:
+          type: string
+          description: the instructions of making the recipe
+        servings:
+          type: number
+          description: the number of the servings of the recipe
+    
+    MyRecipe:
+      require:
+      - newRecipePreview
+      - ingredients
+      - instructions
+      - servings
+      type: object
+      properties:
+        newRecipePreview:
+          $ref: '#/components/schemas/newRecipePreview'
         ingredients:
           type: array
           items:
@@ -342,4 +516,35 @@ components:
           type: string
           description: the quantity of the ingredient in the recipe and the unit
           format: <quantity> <units>
-          example: 50 milliliter
+          example: 1 tbsp
+
+    newRecipePreview:
+      type: object
+      properties:
+        title:
+          type: string
+          description: recipe name
+          example: Simple Macaroni and Cheese
+        image:
+          type: string
+          description: recipe image
+          format: URL
+          example: https://spoonacular.com/recipeimages/655455-566x370.jpg
+        readyInMinutes:
+          type: integer
+          description: the time takes to make this recipe
+          example: 45
+        vegetarian:
+          type: boolean
+          description: get indication if the recipe is vegetarian
+          example: false
+        vegan:
+          type: boolean
+          description: get indication if the recipe is vegan
+          example: false
+        glutenFree:
+          type: boolean
+          description: get indication if the recipe is gluten free
+          example: false
+        
+      
