# routes/user.js
@@ -28,7 +28,7 @@ router.post('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
     const recipe_id = req.body.recipeId;
-    await user_utils.markAsFavorite(user_id,recipe_id);
+    await user_utils.markAsFavorite(user_id, recipe_id);
     res.status(200).send("The Recipe successfully saved as favorite");
     } catch(error){
     next(error);
@@ -53,41 +53,6 @@ router.get('/favorites', async (req,res,next) => {
 });
 
 
-/**
- * This path returns the recipes created by the logged-in user
- */
-router.get('/myRecipes', async(req,res,next) => {
-  try{
-    const user_id = req.session.user_id;
-
-    const recipes_id = await user_utils.getMyRecipes(user_id);
-    let recipes_id_array = [];
-    recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
-    const results = await recipe_utils.getRecipesPreview(recipes_id_array, user_id);
-    res.status(200).send(results);
-  }
-  catch(error){
-    next(error);
-  }
-})
-
-
-/**
- * This path gets body with full relevant details about the recipe and save this recipe in the my recipes list of the logged-in user
- */
-router.post('/MyRecipes', async(req,res,next) => {
-  try{
-    const user_id = req.session.user_id;
-    const recipePreview = req.body.recipePreview;
-    const recipeIngredients = req.body.ingredients;
-    const recipePrepInstructions = req.body.instructions;
-    const numOfDishes = req.body.servings;
-    await user_utils.addMyRecipe(user_id, recipePreview, recipeIngredients, recipePrepInstructions, numOfDishes);
-    res.status(200).send("user's recipe was successfully added");
-    } catch(error){
-    next(error);
-  }
-})
 
 router.get('/:userId/familyRecipes', async(req, res, next) => {
   try{
@@ -108,6 +73,43 @@ router.get('/:userId/familyRecipes', async(req, res, next) => {
   })
   
 
+/**
+ * This path returns the recipes created by the logged-in user
+ */
+router.get('/myRecipes', async(req,res,next) => {
+  try{
+    const user_id = req.session.user_id;
+    const recipes_id = await user_utils.getMyRecipes(user_id);
+    let recipes_id_array = [];
+    recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
+    const results = await recipe_utils.getMyRecipesPreview(recipes_id_array, user_id);
+    res.status(200).send(results);
+  }
+  catch(error){
+    next(error);
+  }
+})
+
+
+/**
+ * This path gets body with full relevant details about the recipe and save this recipe in the my recipes list of the logged-in user
+ */
+router.post('/myRecipes', async(req,res,next) => {
+  try{
+    const user_id = req.session.user_id;
+    const recipePreview = req.body.newRecipePreview;
+    const recipeIngredients = req.body.ingredients;
+    const recipePrepInstructions = req.body.instructions;
+    const numOfDishes = req.body.servings;
+    await user_utils.addMyRecipe(user_id, recipePreview, recipeIngredients, recipePrepInstructions, numOfDishes);
+    res.status(200).send("user's recipe was successfully added");
+    } catch(error){
+    next(error);
+  }
+})
+
+
 module.exports = router;
+
 
 
