# routes/utils/user_utils.js
@@ -1,7 +1,7 @@
 const DButils = require("./DButils");
 
 async function markAsFavorite(user_id, recipe_id){
-    await DButils.execQuery(`insert into FavoriteRecipes values (${user_id},${recipe_id})`);
+    await DButils.execQuery(`INSERT INTO FavoriteRecipes (user_id, recipe_id) VALUES (${(user_id)}, '${(recipe_id)}')`);
 }
 
 async function getFavoriteRecipes(user_id){
@@ -9,11 +9,6 @@ async function getFavoriteRecipes(user_id){
     return recipes_id;
 }
 
-async function getMyRecipes(user_id){
-    const recipes_id = await DButils.execQuery(`SELECT recipe_id
-        FROM usersRecipes WHERE user_id = ${user_id}`);
-    return recipes_id;
-}
 
 async function getLastWatchedRecipes(user_id, number){
     const lastWatchedRecipes = await DButils.execQuery(`select recipe_id from lastwatched Where user_id=${user_id} Order By counter DESC Limit ${number}`)
@@ -51,15 +46,28 @@ async function getIngredientsFromRecipe(familyIngredients){
 
 }
 
+async function getMyRecipes(user_id){
+    const recipes_id = await DButils.execQuery(`SELECT recipe_id
+        FROM usersRecipes WHERE user_id = ${user_id}`);
+    return recipes_id;
+}
+
+
 async function addMyRecipe(user_id, recipePreview, recipeIngredients, recipePrepInstructions, numOfDishes){
-    await DButils.execQuery(`INSERT INTO usersRecipes VALUES(${(user_id)}, '${(recipePreview.title)}', '${recipePreview.image}', '${recipePreview.readyInMinuts}', 0, ${recipePreview.vegetarian},
-    ${recipePreview.vegan},'${(recipePreview.glutenFree)}','${(recipeIngredients)}', '${(recipePrepInstructions)}', ${numOfDishes})`);
+    let ingredients = {};
+    for (ingredient of recipeIngredients){
+        ingredients[ingredient.ingredientName] = ingredient.quantity;
+    }
+    let ingredientsJson = JSON.stringify(ingredients);
+
+    await DButils.execQuery(`INSERT INTO usersRecipes (user_id, title, image, readyInMinutes, vegetarian, vegan, glutenFree, ingredients, instructions, servings) VALUES(${(user_id)}, '${(recipePreview.title)}', '${recipePreview.image}', '${recipePreview.readyInMinutes}', ${recipePreview.vegetarian},
+    ${recipePreview.vegan},'${(recipePreview.glutenFree)}','${(ingredientsJson)}', '${(recipePrepInstructions)}', ${numOfDishes})`);
 }
 
 
 exports.markAsFavorite = markAsFavorite;
 exports.getFavoriteRecipes = getFavoriteRecipes;
-exports.getMyRecipes = getMyRecipes;
-exports.addMyRecipe = addMyRecipe;
 exports.getLastWatchedRecipes = getLastWatchedRecipes;
 exports.getFamilyRecipes = getFamilyRecipes;
+exports.getMyRecipes = getMyRecipes;
+exports.addMyRecipe = addMyRecipe;
